# DNAWatermark

./: .gitignore  DEPLOYMENT.md  README.md  api.py  app.py  data.db  pyproject.toml  run.py  watermark.db
data/: gfp.gb
dna_watermark/: __init__.py  api.py  core.py  encoding.py  watermark.py
docs/: SAFE-DNA-Encoding.md
models/: database.py  watermark.py
route/: __init__.py  database_routes.py  encoding_routes.py  genbank_routes.py  health_routes.py  infringement_routes.py  watermark_routes.py
service/: __init__.py  genbank_service.py  infringement_service.py  watermark_service.py
static/: README.md  index.html
static/assets/: index-DxP8GxQF.js  index-W3kYYu0C.css
tests/: test_core.py
