[project]
name = "dna-watermark"
version = "0.1.0"
description = "A DNA watermarking system for synthetic biology products"
authors = [
    {name = "邵励治",email = "shaolizhi1234@126.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.83",
    "cryptography>=42.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-pydantic>=0.11.0"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
